# paper

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
scripts/: fetch-pdfium.sh
src/: app.rs  file_open.rs  main.rs  pdf.rs
